Fix Text Wrap

--- a/src/components/Information/information.scss
+++ b/src/components/Information/information.scss
@@ -4,6 +4,10 @@
 .information {
     overflow: hidden;
 
+    .nowrap {
+        white-space: nowrap;
+    }
+
     &--image {
         height: auto;
         // height: auto;
